<resources>
    <string name="app_name">Coronavirus App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="start">START</string>
    <string name="pause">PAUSE</string>
    <string name="what_is_the_source_of_the_virus">What is the source of the virus?</string>
    <string name="SourceOfCovid">Coronaviruses are a large family of viruses. Some cause illness in people, and others, such as canine and feline coronaviruses, only infect animals. \n\nRarely, animal coronaviruses that infect animals have emerged to infect people and can spread between people. \n\nThis is suspected to have occurred for the virus that causes COVID-19. Middle East Respiratory Syndrome (MERS) and Severe Acute Respiratory Syndrome (SARS) are two other examples of coronaviruses that originated from animals and then spread to people.</string>
    <string name="how_does_the_virus_spread">How does the virus spread?</string>
    <string name="HowCovidSpreads">This virus was first detected in Wuhan City, Hubei Province, China. The first infections were linked to a live animal market, but the virus is now spreading from person-to-person. It’s important to note that person-to-person spread can happen on a continuum. \n\nSome viruses are highly contagious (like measles), while other viruses are less so. The virus that causes COVID-19 seems to be spreading easily and sustainably in the community (“community spread”) in some affected geographic areas.</string>
    <string name="can_someone_with_covid_19_spread_the_illness">Can someone with COVID-19 spread the illness?</string>
    <string name="SpreadCovid">The virus that causes COVID-19 is spreading from person-to-person. Someone who is actively sick with COVID-19 can spread the illness to others. That is why CDC recommends that these patients be isolated either in the hospital or at home (depending on how sick they are) until they are better and no longer pose a risk of infecting others. \n\nHow long someone is actively sick can vary so the decision on when to release someone from isolation is made on a case-by-case basis in consultation with doctors, infection prevention and control experts, and public health officials and involves considering specifics of each situation including disease severity, illness signs and symptoms, and results of laboratory testing for that patient.</string>
    <string name="spread_the_illness">Can someone who has been Quarantined still spread the illness?</string>
    <string name="SomeoneWhoHasBeen">Quarantine means separating a person or group of people who have been exposed to a contagious disease but have not developed illness (symptoms) from others who have not been exposed, in order to prevent the possible spread of that disease. \n\nQuarantine is usually established for the incubation period of the communicable disease, which is the span of time during which people have developed illness after exposure. \n\nFor COVID-19, the period of quarantine is 14 days from the last date of exposure, because 14 days is the longest incubation period seen for similar coronaviruses. Someone who has been released from COVID-19 quarantine is not considered a risk for spreading the virus to others because they have not developed illness during the incubation period.</string>
    <string name="frozen_food">Can COVID-19 be spread through food including refrigerated and frozen food?</string>
    <string name="Frozen_temperatures">Coronaviruses are generally thought to be spread from person-to-person through respiratory droplets. Currently there is no evidence to support transmission of COVID-19 associated with food. \n\nBefore preparing or eating food it is important to always wash your hands with soap and water for 20 seconds for general food safety. Throughout the day wash your hands after blowing your nose, coughing or sneezing, or going to the bathroom. \n\nIt may be possible that a person can get COVID-19 by touching a surface or object that has the virus on it and then touching their own mouth, nose, or possibly their eyes, but this is not thought to be the main way the virus spreads. \n\nIn general, because of poor survivability of these coronaviruses on surfaces, there is likely very low risk of spread from food products or packaging that are shipped over a period of days or weeks at ambient, refrigerated, or frozen temperatures.</string>
    <string name="outbreak">Will warm weather stop the outbreak of COVID-19 outbreak?</string>
    <string name="it_ongoing">It is not yet known whether weather and temperature impact the spread of COVID-19. Some other viruses, like the common cold and flu, spread more during cold weather months but that does not mean it is impossible to become sick with these viruses during other months. \n\nAt this time, it is not known whether the spread of COVID-19 will decrease when weather becomes warmer. There is much more to learn about the transmissibility, severity, and other features associated with COVID-19 and investigations are ongoing.</string>
    <string name="what_is_community_spread">What is Community spread?</string>
    <string name="they_became_infected">Community spread means people have been infected with the virus in an area, including some who are not sure how or where they became infected.</string>
    <string name="about_covid_19">About COVID-19</string>
    <string name="how_to_protect_yourself">How to Protect Yourself</string>
    <string name="how_it_spreads">How It Spreads</string>
    <string name="symptoms_testing"><![CDATA[Symptoms & Testing]]></string>
    <string name="misinformation">Misinformation</string>
    <string name="the_basics">The Basics</string>
    <string name="misinfo">Misinformation</string>
    <string name="how_can_i_help_protect_myself">How can I help protect myself?</string>
    <string name="what_to_do">What to do if I come in close contact with someone who has COVID-19</string>
    <string name="facemasks_to_prevent_covid_19">Does the CDC recommend the use of facemasks to prevent COVID-19?</string>
    <string name="china">Am I at risk for COVID-19 from a package/product shipping from China?</string>
    <string name="covid_19_can_cause">What are the symptoms and complications that COVID-19 can cause?</string>
    <string name="tested_for_covid_19">Should I be tested for COVID-19?</string>
    <string name="Covid_19">Call your healthcare professional if you feel sick with fever, cough, or difficulty breathing, and have been in close contact with a person known to have COVID-19, or if you live in or have recently traveled from an area with ongoing spread of COVID-19. Your healthcare professional will work with your state’s public health department and CDC to determine if you need to be tested for COVID-19.</string>
    <string name="how_is_a_person_tested_for_covid_19">How is a person tested for COVID-19?</string>
    <string name="weekends_holidays">State and local health departments who have identified a person under investigation (PUI) should immediately notify CDC’s Emergency Operations Center (EOC) to report the PUI and determine whether testing for COVID-19 at CDC is indicated. The EOC will assist local/state health departments to collect, store, and ship specimens appropriately to CDC, including during afterhours or on weekends/holidays.</string>
    <string name="positive">Can a person test negative and later positive for COVID-19?</string>
    <string name="ill">In the early stages of infection, it is possible the virus will not be detected. For COVID-19, a negative test result for a sample collected while a person has symptoms likely means that the COVID-19 virus is not causing their current illness.</string>
    <string name="stig">Why might someone blame or avoid individuals and groups (create stigma) because of COVID-19?</string>
    <string name="problem">People may be worried or anxious about friends and relatives who are living in or visiting areas where COVID-19 is spreading. Some people are worried about the disease. Fear and anxiety can lead to social stigma, for example, towards Chinese or other Asian Americans or people who were in quarantine. \n\nStigma is discrimination against an identifiable group of people, a place, or a nation. Stigma is associated with a lack of knowledge about how COVID-19 spreads, a need to blame someone, fears about disease and death, and gossip that spreads rumors and myths. \n\nStigma hurts everyone by creating more fear or anger towards ordinary people instead of the disease that is causing the problem.</string>
    <string name="related_to_covid_19">How can people help stop stigma related to COVID-19?</string>
    <string name="help_stop_stigma">People can fight stigma and help, not hurt, others by providing social support. Counter stigma by learning and sharing facts. Communicating the facts that viruses do not target specific racial or ethnic groups and how COVID-19 actually spreads can help stop stigma.</string>
    <string name="what_is_a_novel_cornavirus_covid_19">What is a novel cornavirus/COVID-19?</string>
    <string name="coronavirus_diagnosis">A novel coronavirus is a new coronavirus that has not been previously identified. The virus causing coronavirus disease 2019 (COVID-19), is not the same as the coronaviruses that commonly circulate among humans and cause mild illness, like the common cold. \n\nA diagnosis with other coronaviruses is not the same as a COVID-19 diagnosis. Patients with COVID-19 will be evaluated and cared for differently than patients with common coronavirus diagnosis.</string>
    <string name="why_is_the_disease_being_called_covid_19">Why is the disease being called COVID-19?</string>
    <string name="disease">On February 11, 2020 the World Health Organization announced an official name for the disease that is causing the 2019 novel coronavirus outbreak, first identified in Wuhan China. The new name of this disease is coronavirus disease 2019, abbreviated as COVID-19. \n\nIn COVID-19, ‘CO’ stands for ‘corona,’ ‘VI’ for ‘virus,’ and ‘D’ for disease. Formerly, this disease was referred to as “2019 novel coronavirus” or “2019-nCoV”. There are many types of human coronaviruses including some that commonly cause mild upper-respiratory tract illnesses. COVID-19 is a new disease, caused be a novel (or new) coronavirus that has not previously been seen in humans. \n\nThe name of this disease was selected following the World Health Organization (WHO) best practice for naming of new human infectious diseases.</string>
    <string name="treating_covid_19">Are antibiotics effective in preventing or treating COVID-19?</string>
    <string name="bacterial_infection">No. Antibiotics do not work against viruses, they only work on bacterial infections. COVID-19 is caused by a virus, so antibiotics do not work. Antibiotics should not be used as a means of prevention or treatment of COVID-19. They should only be used as directed by a physician to treat a bacterial infection.</string>
    <string name="is_there_something_i_should_not_do">Is there something I should NOT do?</string>
    <string name="health_care_provider">The following measures ARE NOT effective against COVID-2019 and can be harmful: \n\n Smoking \n Taking traditional herbal remedies \n Wearing multiple masks \n Taking self-medication such as antibiotics \n\nIn any case, if you have fever, cough and difficulty breathing seek medical care early to reduce the risk of developing a more severe infection and be sure to share your recent travel history with your health care provider.</string>
    <string name="source"><![CDATA[Source: www.cdc.gov & www.who.int]]></string>
</resources>