<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item android:title="@string/about_covid_19">
            <menu>
                <item
                    android:id="@+id/nav_spread"
                    android:icon="@drawable/ic_spread"
                    android:title="@string/how_it_spreads" />
                <item
                    android:id="@+id/nav_protect"
                    android:icon="@drawable/ic_protect"
                    android:title="@string/how_to_protect_yourself" />
                <item
                    android:id="@+id/nav_symptoms"
                    android:icon="@drawable/ic_symptoms"
                    android:title="@string/symptoms_testing" />
                <item
                    android:id="@+id/nav_myth"
                    android:icon="@drawable/ic_mis"
                    android:title="@string/misinformation" />
            </menu>
        </item>
    </group>



</menu>
